Converted from Java to Kotlin